--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
     "react-scripts": "3.4.1",
+    "redux-loop": "^6.0.1",
     "typescript": "^3.9.7"
   },
   "scripts": {
